WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198565
[LFC][IFC] LineLayout::placeInlineItems should not apply float contraint.
https://bugs.webkit.org/show_bug.cgi?id=198565
Summary
[LFC][IFC] LineLayout::placeInlineItems should not apply float contraint.
alan
Reported
2019-06-05 08:05:58 PDT
its caller, LineLayout::layout should do it instead.
Attachments
Patch
(13.75 KB, patch)
2019-06-05 08:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.74 KB, patch)
2019-06-05 08:41 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-highsierra-wk2
(2.79 MB, application/zip)
2019-06-05 09:55 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-05 08:06:20 PDT
<
rdar://problem/51440718
>
alan
Comment 2
2019-06-05 08:25:58 PDT
Created
attachment 371398
[details]
Patch
Antti Koivisto
Comment 3
2019-06-05 08:33:46 PDT
Comment on
attachment 371398
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=371398&action=review
> Source/WebCore/ChangeLog:10 > + When placeInlineItems() is called by the preferred width computation, intruding floats should can be ignored
typo 'should can'
alan
Comment 4
2019-06-05 08:41:12 PDT
Created
attachment 371400
[details]
Patch
EWS Watchlist
Comment 5
2019-06-05 09:55:30 PDT
Comment on
attachment 371400
[details]
Patch
Attachment 371400
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/12385388
New failing tests: http/wpt/service-workers/service-worker-networkprocess-crash.html
EWS Watchlist
Comment 6
2019-06-05 09:55:31 PDT
Created
attachment 371413
[details]
Archive of layout-test-results from ews105 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
alan
Comment 7
2019-06-05 10:03:12 PDT
(In reply to Build Bot from
comment #5
)
> Comment on
attachment 371400
[details]
> Patch > >
Attachment 371400
[details]
did not pass mac-wk2-ews (mac-wk2): > Output:
https://webkit-queues.webkit.org/results/12385388
> > New failing tests: > http/wpt/service-workers/service-worker-networkprocess-crash.html
srsly?
WebKit Commit Bot
Comment 8
2019-06-05 10:34:26 PDT
Comment on
attachment 371400
[details]
Patch Clearing flags on attachment: 371400 Committed
r246114
: <
https://trac.webkit.org/changeset/246114
>
WebKit Commit Bot
Comment 9
2019-06-05 10:34:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug